public/css/styles.css
/******* Change Box Model ***************/
*,
*:before,
*:after {
  box-sizing: border-box;
}

/* Truman Benjamin */
/* header.ejs */
#top-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 30px 20px;
}

.siteName a {
  font-size: 36px;
  font-weight: bold;
  text-decoration: none;
  color: black;
}

#tools {
  position: absolute;
  top: 10px;
  right: 20px;
  padding: 10px 10px;
}

#tools a {
  font-size: 20px;
  text-decoration: none;
  color: black;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

#tools a:hover {
  text-decoration: underline;
}

/* navigation.ejs */
nav {
  background-color: black;
  padding: 10px 0;
}

nav ul {
  list-style: none;
  display: flex;
  justify-content: space-evenly;
}

nav ul li {
  padding: 10px;
  color: white;
  text-decoration: none;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-size: 26px;
  font-weight: bold;
  transition: transform 0.3s ease-in-out;
}
nav ul li a {
  color: white;
  text-decoration: none;
  display: block; /* Helps padding work */
}


nav ul li:hover {
  transform: translateY(-3px);
}

/* New split div hero container styles */
body {
  font-family: Arial, sans-serif;
  height: 100vh;
}


/* index.ejs */
.welcome {
  margin: 40px;
}
.split-container {
  display: flex;
  height: 80vh;
  position: relative;
}
.carimage {
  width: 100%;
}

.info, .image {
  width: 50%;
  position: relative;
}

.info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center; 
  padding: 10px;
  z-index: 1;
}

.info h1, .info h2 {
  margin: 10px;
}

.cta-button {
  display: inline-block;
  padding: 15px 30px;
  margin-top: 20px;
  background-color: #007BFF;
  color: white;
  text-transform: uppercase;
  font-weight: bold;
  text-decoration: none;
  border-radius: 5px;
  transition: background-color 0.3s ease;
}

.cta-button:hover {
  background-color: #0056b3;
}

.image {
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 0;

}

.image img {
  max-width: 90%;
  height: auto; 
  box-shadow: 0px 4px 8px rgba(0,0,0,0.2,); 
}

/* Reviews and Upgrades Section */
.content {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

.content {
  justify-content: center;
  align-items: center;
  height: 60%;
}

.reviews {
  width: 50%;
  text-align: center;
  font-size: 20px;
}

.upgrades {
  width: 50%;
  text-align: center;
}

@media (min-width: 768px) {
  .content {
      flex-direction: row;         
      flex: 0 0 50%;
      align-items: center;
  }
  .copyright {
    width: 100%;
  }
  html {
    transform: scale(0.95);
    z-index: -1;
    background-image: url(/images/site/checkerboard.jpg);
  }
  body, .split-container, .content, footer {
    background-color: white;
  }
} 

.upgrades {
  padding: 20px;
  margin: 20px;
  justify-content: center;
  align-items: center;
}
.upgrade-box {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 10px;
}

.upgrade-item {
  background-color: #007BFF;
  color: white;
  padding: 10px 15px;
  text-decoration: none;
  border-radius: 5px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.upgrade-item:hover {
  background-color: #0056b3;
}

.upgrade-image {
  max-width: 20%;
  height: auto;
  margin-bottom: 10px;

}
/* footer */
.copyright { 
  margin: 0;
  padding: 10px;
}

